6.0-beta-1.0 - Fix a couple of bugs